modificação do nome do projeto, alteração das imagen, alterações nas folhas de estilo

--- a/style/main.css
+++ b/style/main.css
@@ -1,56 +1,63 @@
-:root{
-    --vermelho:#E50914;
-    --preta:#141414;
+:root {
+    --vermelho: #E50914;
+    --preta: #141414;
 }
 
-*{
-    margin:0;
-    padding:0;
+* {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
 /*elementos base*/
-body{
-   background: var(--preta);
-   font-family: 'Arial', Times, serif;
-   color:white;
+body {
+    background: var(--preta);
+    font-family: 'Oswald', sans-serif;
+    color: white;
 }
 
 
-header .container{
-    display:flex;
+header .container {
+    display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    
+
 }
 
-header .logo{
+header .logo {
     margin-left: 5px;
     color: var(--vermelho);
     font-family: 'Arial Black', Times;
-    font-size:40px;
+    font-size: 40px;
 }
 
-header nav a{
-    text-decoration:none;
-    color:#AAA;
+header nav a {
+    text-decoration: none;
+    color: #AAA;
     margin-right: 10px;
 }
 
 
-header nav a:hover{
-    color:#fff;
+header nav a:hover {
+    color: #fff;
+}
+header .menu{
+    position: fixed;
+    right: 10px;
+    top:15px;
+ 
+    
 }
 
 /*filme principal*/
-.filme-principal{
-    font-size:16px;
-    background: linear-gradient(rgba(0,0,0,.50),rgba(0,0,0,.50)100%),  url('/img/capa-house.jpg');
+.filme-principal {
+    font-size: 16px;
+    background: linear-gradient(rgba(0, 0, 0, .50), rgba(0, 0, 0, .50)100%), url('/img/capaPitch.png');
 
-    height:400px;
-    background-size:cover;
- 
+    height: 400px;
+    background-size: cover;
+
 
     display: flex;
     flex-direction: column;
@@ -59,24 +66,24 @@ header nav a:hover{
 }
 
 
-.filme-principal .descricao{
+.filme-principal .descricao {
     margin-top: 10px;
     margin-bottom: 40px;
 }
 
 
-.filme-principal .titulo{
+.filme-principal .titulo {
     margin-top: 15%;
     font-size: 40px;
     font-family: 'Trebuchet MS', Arial, sans-serif;
 }
 
-.botao{
-    background-color: rgba(0,0,0,.50);
-    border:none;
+.botao {
+    background-color: rgba(0, 0, 0, .50);
+    border: none;
     color: white;
 
-    padding:15px 30px;
+    padding: 15px 30px;
     margin-right: 15px;
     font-size: 12px;
 
@@ -84,51 +91,67 @@ header nav a:hover{
     transition: .3s ease all;
 }
 
-.botao:hover{
-    background-color:white;
-    color:black;
+.botao:hover {
+    background-color: white;
+    color: black;
 }
 
-.botao i{
+.botao i {
     margin-right: 8px;
 }
 
 
-.container{
+.container {
     margin-left: 20px;
 }
 
-.filme-principal .container{
+.filme-principal .container {
     width: 70%;
 }
 
-.box-filme{
+.box-filme {
     height: 100%;
     width: 100%;
     display: block;
     cursor: pointer;
+    opacity: 0.7;
 }
 
 
-.carrosel-filmes{
-    margin-top:5px;
+.carrosel-filmes {
+    margin-top: 5px;
 }
 
+.carrosel-filmes h2 {
+    padding: 25px 10px;
 
+}
 
+.item {
+    height: 350px;
+    width: auto;
+}
 
+.item img {
+    position: relative;
+    float: left;
+    min-width: 100%;
+    max-width: 100%;
 
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+.item p {
+    position: absolute;
+    bottom: 5px;
+    background-color: rgba(0, 0, 0, .50);
+    border-radius: 10px;
+    padding: 5px;
+}
+footer{
+    margin-top: 50px;
+    height: 100px;
+    text-align: center;
+}
+footer a{
+    margin-right: 10px;
+}
